--- a/sync_diff_inspector/config/config_sharding.toml
+++ b/sync_diff_inspector/config/config_sharding.toml
@@ -49,6 +49,8 @@ check-struct-only = false
     port = 4000
     user = "root"
     password = ""
+    session.tidb_opt_prefer_range_scan = "ON"
+    session.max_execution_time = 86400
     # remove comment if use tidb's snapshot data
     # snapshot = "2016-10-08 16:45:26"
 
